<resources>
    <string name="app_name">NewNEWS</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="name">Name</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="button">Button</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_register">Register</string>
    <string name="action_signin">Sign-In</string>
    <string name="action_signout">Sign-Out</string>
    <string name="action_contact">Contact Us</string>
    <string name="action_search">Search</string>
    <string name="action_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="newnews">NewNEWS</string>
    <string name="bbc">BBC</string>
    <string name="google">Google</string>
    <string name="news_title">News Title</string>
    <string name="news_content">News content</string>
    <string name="home">Home</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="image_description">Image Description</string>
    <string name="content">Content</string>
    <string name="time">Time</string>
    <string name="share">Share</string>
    <string name="webpage">Link (if any)</string>
    <string name="username_or_email">Username or Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="save_password">Save Password</string>
</resources>
