<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.newnews.newnews.CreateFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <EditText
            android:id="@+id/title_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Title"
            android:textColor="@android:color/black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/time_create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/time"
                android:textSize="14sp"
                android:clickable="true"
                android:focusable="false"/>
            <EditText
                android:id="@+id/author_create"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/author"
                android:textAlignment="viewEnd"
                android:textColor="@color/colorPrimary"
                android:textSize="14sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/bodyImg_create"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@mipmap/ic_launcher_round"
            tools:ignore="ContentDescription" />
            <EditText
                android:id="@+id/bodyImgDescription_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/image_description"
                android:textAppearance="@android:style/TextAppearance.Material.Small" />
            <EditText
                android:id="@+id/content_create"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/content"
                android:textColor="@android:color/black" />

    </LinearLayout>



</ScrollView>
