<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.newnews.newnews.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="60dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="40sp"
        android:textStyle="bold" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:theme="@style/TextInputLayout_style"
        app:hintTextAppearance="@style/floatLabel_style"
        android:layout_marginTop="160dp"
        android:layout_alignParentStart="true">

        <AutoCompleteTextView
            android:id="@+id/email_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/username_or_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout"
        android:layout_marginTop="9dp"
        android:theme="@style/TextInputLayout_style"
        app:hintTextAppearance="@style/floatLabel_style">

        <EditText
            android:id="@+id/password_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColor="@android:color/black" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textInputLayout2"
        android:layout_marginTop="14dp"
        android:background="@color/colorPrimary"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

</RelativeLayout>

