<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    tools:context="com.newnews.newnews.DetailFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/news_title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="19dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/time_detail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Time"
                    android:textAlignment="viewStart" />

                <TextView
                    android:id="@+id/author_detail"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="Author"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/colorPrimary" />
            </LinearLayout>

            <ImageView
                android:id="@+id/bodyImg"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:src="@mipmap/ic_launcher_round"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/bodyImgDescription_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/image_description"
                android:textAlignment="textStart" />


            <TextView
                android:id="@+id/content_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:text="@string/news_content"
                android:textAlignment="textStart"
                android:textColor="@android:color/black"
                android:textSize="15sp" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>
